fix: default JVM args conflict with user args